# mkfbr-api

./: Dockerfile  README.md  pyproject.toml  requirements.txt  wsgi.py
api/: __init__.py  config.py  generators.py
api/anthill/: __init__.py  routes.py
api/models/: models.py
api/redirects/: __init__.py  routes.py
api/site/: __init__.py  routes.py
api/static/css/: style.css
api/static/js/: api.js
api/templates/: index.html
